--- a/index.html
+++ b/index.html
@@ -162,5 +162,67 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <table class="table table-hover table-bordered border-primary">
+        <thead class="table-dark">
+          <th>Sno</th>
+          <th>Name</th>
+          <th>Age</th>
+          <th>City</th>
+          <th>State</th>
+          <th>Country</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Vinoth</td>
+            <td>27</td>
+            <td>Bengaluru</td>
+            <td>Karnataka</td>
+            <td>India</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Kiru</td>
+            <td>22</td>
+            <td>Pune</td>
+            <td>Maharastra</td>
+            <td>India</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>MSD</td>
+            <td>37</td>
+            <td>Chennai</td>
+            <td>TamilNadu</td>
+            <td>India</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Virat</td>
+            <td>33</td>
+            <td>Bengaluru</td>
+            <td>Karnataka</td>
+            <td>India</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Santhi</td>
+            <td>45</td>
+            <td>Goa</td>
+            <td>Maharastra</td>
+            <td>India</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>Selvan</td>
+            <td>59</td>
+            <td>Guntur</td>
+            <td>Andhra</td>
+            <td>India</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
