--- a/index.html
+++ b/index.html
@@ -1,38 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assignment 3</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="styles.css">
-
-</head>
-<body>
- <div class="row">
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark myNav">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#" myBrand>mySelf</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="mb-2 navbar-nav ms-auto mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active myLink" aria-current="page" href="#">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link myLink" href="#">Testimonials</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link myLink" href="#">Contact Me</a>
-          </li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment 3</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="row">
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark myNav">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#" myBrand>mySelf</a>
+          <button
+            style="background-color: white"
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="mb-2 navbar-nav ms-auto mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active myLink" aria-current="page" href="#"
+                  >Projects</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link myLink" href="#">Testimonials</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link myLink" href="#">Contact Me</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <!-- maincontent -->
+    <div class="container-fluid myBack">
+      <!-- <div class="row justify-content-start align-content-center">
+        <div class="col-md-5 col-sm-8 myContainer">
+          <div class="col-sm-10">
+            <div class="row justify-content-between align-content-center">
+              <div class="col">
+                <img
+                  class="myImage"
+                  src="https://avatars.githubusercontent.com/u/49114903?v=4"
+                  alt=""
+                />
+              </div>
+              <div class="col">
+                <div class="card__right">
+                  <h3>Vinothkumar</h3>
+                  <h5>React Front End Developer</h5>
+                  <p>
+                    Eager to take a new journey in Full Stack Development with
+                    MERN Stack
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> -->
+      <div class="row align-content-center">
+        <div class="col-md-6 col-sm-12">
+          <div class="myContainer" style="margin-top: 65px">
+            <div class="px-3 row justify-content-between align-items-center">
+              <div class="col">
+                <img
+                  class="myImage"
+                  src="https://avatars.githubusercontent.com/u/49114903?v=4"
+                  alt=""
+                />
+              </div>
+              <div class="col myBio">
+                <h3>Vinothkumar S</h3>
+                <h5>React Front End Developer</h5>
+                <p>
+                  Eager to take a new journey in Full Stack Development with
+                  MERN Stack
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6"></div>
       </div>
     </div>
-  </nav>
- </div>
-</body>
+  </body>
 </html>
