setup nav llinks

--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="mb-2 navbar-nav ms-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active myLink" aria-current="page" href="#"
+                <a
+                  class="nav-link active myLink"
+                  aria-current="page"
+                  href="#projects"
                   >Projects</a
                 >
               </li>
+
               <li class="nav-item">
-                <a class="nav-link myLink" href="#">Testimonials</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link myLink" href="#">Contact Me</a>
+                <a class="nav-link myLink" href="#contact-me">Contact Me</a>
               </li>
             </ul>
           </div>
@@ -83,7 +84,7 @@
     <!-- Projects -->
     <div class="container-fluid myHeading">
       <div class="myProjects">
-        <div class="myHeading">Projects</div>
+        <div class="myHeading" id="projects">Projects</div>
       </div>
     </div>
     <div class="container mt-4">
@@ -146,7 +147,7 @@
     <!-- contact-form -->
     <div class="container-fluid myHeading">
       <div class="myProjects">
-        <div class="myHeading">Contact Form</div>
+        <div class="myHeading" id="contact-me">Contact Form</div>
       </div>
     </div>
     <div class="container mt-3">
